--- a/force-app/Exercises/main/default/lwc/studentBrowserForm/studentBrowserForm.html
+++ b/force-app/Exercises/main/default/lwc/studentBrowserForm/studentBrowserForm.html
@@ -1,3 +1,5 @@
 <template>
+    <lightning-card title="Filter Students"
+    icon-name="utility:search">
     <h1>Filter form goes here</h1>
-</template>
+    </lightning-card></template>
