--- a/force-app/Exercises/main/default/lwc/studentBrowserForm/studentBrowserForm.html
+++ b/force-app/Exercises/main/default/lwc/studentBrowserForm/studentBrowserForm.html
@@ -2,4 +2,6 @@
     <lightning-card title="Filter Students"
     icon-name="utility:search">
     <h1>Filter form goes here</h1>
-    </lightning-card></template>
+    </lightning-card>
+    <div class="slds-m-bottom_x-small"></div>
+</template>
