--- a/force-app/Exercises/main/default/lwc/studentBrowserForm/studentBrowserForm.html
+++ b/force-app/Exercises/main/default/lwc/studentBrowserForm/studentBrowserForm.html
@@ -1,7 +1,9 @@
 <template>
     <lightning-card title="Filter Students"
     icon-name="utility:search">
+    <div class="slds-var-p-horizontal_small">
     <h1>Filter form goes here</h1>
+</div>
     </lightning-card>
-    <div class="slds-m-bottom_x-small"></div>
+    <div class="slds-m-bottom_xx-small"></div>
 </template>
