--- a/force-app/Exercises/main/default/lwc/studentBrowserForm/studentBrowserForm.html
+++ b/force-app/Exercises/main/default/lwc/studentBrowserForm/studentBrowserForm.html
@@ -2,7 +2,8 @@
     <lightning-card title="Filter Students"
     icon-name="utility:search">
     <div class="slds-var-p-horizontal_small">
-    <h1>Filter form goes here</h1>
+    <h1 class="crazycomic">
+        Filter form goes here</h1>
 </div>
     </lightning-card>
     <div class="slds-m-bottom_xx-small"></div>
