--- a/force-app/Exercises/main/default/lwc/studentBrowserForm/studentBrowserForm.html
+++ b/force-app/Exercises/main/default/lwc/studentBrowserForm/studentBrowserForm.html
@@ -1,10 +1,22 @@
 <template>
     <lightning-card title="Filter Students"
     icon-name="utility:search">
-    <div class="slds-var-p-horizontal_small">
-    <h1 class="crazycomic">
-        Filter form goes here</h1>
-</div>
+    <lightning-layout horizontal-align="center" >
+        <lightning-layout-item padding="around-small"
+        size="4">
+        <lightning-combobox name="instructor" label="Select
+Instructor" variant="label-hidden" options={instructors} value={selectedInstructorId}
+placeholder="Select an instructor" onchange={onInstructorChange}>
+    </lightning-combobox>
+         </lightning-layout-item>
+        <lightning-combobox name="deliverySelector" label="Select
+        Delivery" variant="label-hidden" value={selectedDeliveryId}
+        placeholder="Select a delivery" options={deliveries}>
+        </lightning-combobox>
+        <lightning-layout-item padding="around-small"
+        size="4">
+        </lightning-layout-item>
+        </lightning-layout>
     </lightning-card>
     <div class="slds-m-bottom_xx-small"></div>
 </template>
