--- a/force-app/Exercises/main/default/lwc/studentBrowserForm/studentBrowserForm.html
+++ b/force-app/Exercises/main/default/lwc/studentBrowserForm/studentBrowserForm.html
@@ -9,12 +9,13 @@ Instructor" variant="label-hidden" options={instructors} value={selectedInstruct
 placeholder="Select an instructor" onchange={onInstructorChange}>
     </lightning-combobox>
          </lightning-layout-item>
-        <lightning-combobox name="deliverySelector" label="Select
-        Delivery" variant="label-hidden" value={selectedDeliveryId}
-        placeholder="Select a delivery" options={deliveries}>
-        </lightning-combobox>
+        
         <lightning-layout-item padding="around-small"
         size="4">
+        <lightning-combobox name="deliverySelector" label="Select
+        Delivery" variant="label-hidden" value={selectedDeliveryId}
+        placeholder="Select a delivery" options={deliveries} onchange={onDeliveryChange}>
+        </lightning-combobox>
         </lightning-layout-item>
         </lightning-layout>
     </lightning-card>
