--- a/force-app/Exercises/main/default/lwc/studentBrowserForm/studentBrowserForm.html
+++ b/force-app/Exercises/main/default/lwc/studentBrowserForm/studentBrowserForm.html
@@ -17,6 +17,13 @@ placeholder="Select an instructor" onchange={onInstructorChange}>
         placeholder="Select a delivery" options={deliveries} onchange={onDeliveryChange}>
         </lightning-combobox>
         </lightning-layout-item>
+        <lightning-layout-item padding="around-small">
+            <lightning-button variant="brand"
+            disabled={isButtonDisabled}
+            label="Add New Delivery"
+            onclick={onAddNewDelivery}>
+            </lightning-button>
+            </lightning-layout-item>
         </lightning-layout>
     </lightning-card>
     <div class="slds-m-bottom_xx-small"></div>
