--- a/force-app/Exercises/main/default/lwc/studentTiles/studentTiles.html
+++ b/force-app/Exercises/main/default/lwc/studentTiles/studentTiles.html
@@ -1,6 +1,6 @@
 <template>
     <template for:each ={studentList} for:item ="student">
-    <c-student-tile student={student}
+    <c-student-tile selected-student-id={selectedStudentId} student={student}
     key ={student.Id}></c-student-tile>
     </template>
     
