--- a/force-app/Exercises/main/default/lwc/layoutManager/layoutManager.html
+++ b/force-app/Exercises/main/default/lwc/layoutManager/layoutManager.html
@@ -28,8 +28,12 @@
 		</template>
 
 		<template if:true={certPopularityView}>
-			<lightning-layout-item  padding="around-small" size="10">
-				<lightning-card title="Cert Popularity will go here"></lightning-card>
+			<lightning-layout-item padding="around-small"
+size="10" >
+<c-certified-student-list
+certification-name={certificationName}
+certification-id={certificationId} >
+</c-certified-student-list>
 			</lightning-layout-item>
 		</template>
 
